tempfile/derive_more/tests/compile_fail/as_ref/skip_and_others.rs
#[derive(derive_more::AsRef)]
struct Foo {
    #[as_ref]
    bar: i32,
    #[as_ref(skip)]
    baz: f32,
}

fn main() {}
